--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -20,15 +20,17 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="142dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/cameraView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="170dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="36dp"
         android:layout_weight="1"
-        android:text="Button" />
+        android:text="Translate" />
 </RelativeLayout>
