UI Changes - Sprint 3
Added background image for home screen. Changed background tint for log in and forgot password buttons.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#7C0707"
+        android:backgroundTint="#07367C"
         android:text="@string/sign_in"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#7C0707"
+        android:backgroundTint="#07367C"
         android:text="@string/forgot_password"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
