--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:padding">16dp</item>
 
-        <item name="android:background">@color/buttonColor</item>
+        <item name="android:background">@color/black</item>
 
         <item name="android:textColor">@android:color/white</item>
 
