--- a/app/src/main/res/layout/tfe_od_activity_camera.xml
+++ b/app/src/main/res/layout/tfe_od_activity_camera.xml
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/signitLogo" />
+                android:src="@drawable/signit_logo_2" />
         </androidx.appcompat.widget.Toolbar>
 
     </RelativeLayout>
